objects/Work_Location__c/Work_Location__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the locations of an organization.</description>
    <label>Work Location 1</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Locatios 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>