objects/Work_Location__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Work Locatios 1</relationshipLabel>
    <relationshipName>Work_Locatios_1</relationshipName>
    <type>Lookup</type>
</CustomField>