objects/Work_Location__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>This field indicates the zipcode</description>
    <label>ZipCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>